2012-10-24  Andreas K. Foerster  <info@akfoerster.de>

	* data2c.awk: use static

2012-10-22  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c, avatar-sdl.c: split files

2012-10-20  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-sdl.c: fix centering header/footer

2012-10-19  Andreas K. Foerster  <info@akfoerster.de>

	* lots of refactoring not further documented

	* avatar-sdl.c: only support 32 bits per pixel internally

	* lua/akfavatar-graphic.c:
	use same color method as rest of AKFAvatar

2012-10-17  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-sdl.c (avt_load_image_file_sdl)
	(avt_load_image_stream_sdl, avt_load_image_memory_sdl)
	(avt_load_image_file, avt_load_image_stream, avt_load_image_memory):
	new funtions
	rest adapted

	* remove all deprecated code (would be too much to change)

2012-10-15  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-sdl (avt_load_image_xpm):
	limit sizes to avoid exessive memory usage

	* lua/lua-akfavatar-prg.c (reset): also reset encoding

2012-10-13  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-sdl.c (avt_load_image_xpm):
	refactoring also fixes bug with truecolor images

	* avatar-sdl.c: remove support for OLD_SDL
	use standard libc where appropriete

2012-10-12  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-sdl.c (avt_bar): renamed from avt_fill_area

	* avatar-sdl.c: lots of refactoring

2012-10-11  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-sdl.c (avt_put_image_xbm): new function
	(avt_button_inlay): adapted

2012-10-10  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar-graphic.c (lgraphic_text):
	support combining characters

2012-10-09  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar-sdl.c (avt_combining): new function
	(avt_drawchar, avt_tell_len): adapted

	* lua/lua-avt.c (lavt_combining): new function

2012-10-08  Andreas K. Foerster  <info@akfoerster.de>

	* bdf2c, rgb2c: fixed for new GAWK and improved
