@@ -40,7 +40,6 @@
 #include <strings.h>
 #include <errno.h>
 #include <iconv.h>
-#include <sys/time.h>
 
 // include images
 #include "btn.xpm"
@@ -150,7 +149,6 @@ enum avt_button_type
 static avt_graphic *base_button;
 static avt_graphic *raw_image;
 static int fontwidth, fontheight, fontunderline;
-static struct timeval start_ticks;
 static struct avt_key_buffer avt_keys;
 
 // conversion descriptors for text input and output
@@ -229,18 +227,6 @@ extern void
 avt_clear_keys (void)
 {
   avt_keys.position = avt_keys.end = 0;
-}
-
-extern size_t
-avt_ticks (void)
-{
-  struct timeval now;
-
-  // POSIX.1-2001
-  gettimeofday (&now, NULL);
-
-  return ((now.tv_sec - start_ticks.tv_sec) * 1000)
-    + ((now.tv_usec - start_ticks.tv_usec) / 1000);
 }
 
 extern void
@@ -6102,9 +6088,6 @@ avt_start_common (avt_graphic * new_screen)
       _avt_STATUS = AVT_ERROR;
       return NULL;
     }
-
-  if (not start_ticks.tv_sec)
-    gettimeofday (&start_ticks, NULL);
 
   avt_reset ();
 
